# clann

./: .gitignore  AUTHORS  Collapse_monophylies.c  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile_old  NOTES_gene_tree_decomposition.md  NOTES_heuristic_search_options.md  NOTES_html_viewer.md  NOTES_ml_parameter_estimation.md  NOTES_recon_performance_TODO.md  NOTES_rf_hash_method.md  NOTES_species-gene-tree-reconciliation.md  NOTES_tobeaddressed.md  NOTES_treespace_clustering.md  NOTES_treespace_landscape.md  PACKAGING.md  PLAN_web_client.md  PUBLISHING_CHECKLIST.md  ProjectHome.md  README.md  README.txt  ReferencingClann.md  TUTORIAL.md  USER_MANUAL.md  aclocal.m4  clann.h  clann_api.c  clann_api.h  config.h  config.h.in  config.status  configure  configure.ac  configure.aces  configure.in  configure~  consensus.c  (+39 more)
.github/workflows/: conda-build.yml
Docs/: tutorial_trees.ph
Formula/: clann.rb
autom4te.cache/: output.2  output.3  traces.2  traces.3
clann_web/: DESIGN_BRIEF.md  README.md  __init__.py  __main__.py  command_schema.json  commands.py  engine.py  results.py  sandbox.py  server.py  viewer.py  worker.py  worker_client.py
clann_web/static/: index.html  index.mock.html
clann_web/tests/: test_features.py  test_jobs.py  test_nhx_view.py  test_sandbox.py  test_schema.py  test_security.py  test_server.py  test_ui.py  test_worker.py
conda-recipe/: build.sh  meta.yaml
examples/: bsweight_demo.ph  commands.txt  landscape.tsv  my_results.txt  pyclann_demo.py  tutorial_candidates.ph  tutorial_clans.txt  tutorial_multicopy.ph  tutorial_single.ph
pyclann/: README.md  __init__.py  _commands.py  _core.py  _parser.py  pyproject.toml
pyclann/pyclann.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyclann/tests/: test_pyclann.py
stylesheets/: stylesheet.css
tools/: clannview.mock.html  clannview.template.html  gen_viewer_template.py  session_persistence_check.py  session_reset_check.py
