[metadata]
name = clann-web
version = 0.1.0
description = Local browser client for Clann (supertree/reconciliation analysis)
long_description = file: clann_web/README.md
long_description_content_type = text/markdown
author = Chris Creevey
license = GPL-2.0-or-later
keywords = phylogenetics, supertree, reconciliation, clann

[options]
packages = clann_web
python_requires = >=3.8
include_package_data = True

[options.package_data]
clann_web =
    static/*
    command_schema.json
    libclann-server.so
    libclann-server.dylib

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    clann-web = clann_web.__main__:main
